Sort atoms to improve performance, add threading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ if(ENABLE_BLAS)
     include(FindMKL)
     find_package(MKL QUIET)
     if(MKL_FOUND)
-        set(HAVE_MKL TRUE)
+        add_definitions(-DHAVE_MKL)
         set(BLAS_FOUND TRUE)
         set(BLAS_LIBRARIES ${MKL_GNU} ${MKL_SEQUENTIAL} ${MKL_CORE})
     else()
