Attempt to fix MKL include problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ if(ENABLE_BLAS)
         set(BLAS_FOUND TRUE)
         set(BLAS_LIBRARIES ${MKL_GNU} ${MKL_SEQUENTIAL} ${MKL_CORE})
     else()
+        set(MKL_INCLUDE_DIR "")
         find_package(BLAS QUIET)
     endif()
 endif()
