Add induced dipole virial routine

--- a/test/unittests/CMakeLists.txt
+++ b/test/unittests/CMakeLists.txt
@@ -10,6 +10,7 @@ set( SOURCES_UNITTESTS_TESTS
     unittest-fletcher.cpp
     unittest-fullrun.cpp
     unittest-fullrun-compressed.cpp
+    unittest-fullrun-isodipole-virial.cpp
     unittest-fullrun-multipoles.cpp
     unittest-gammafunction.cpp
     unittest-gridsize.cpp
