--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,4 +1,4 @@
-name: CMake
+name: BuildAndTest
 
 on:
   push:
@@ -22,12 +22,17 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Dependencies
-      run: sudo apt-get -y install libfftw3-dev openmpi-bin libopenmpi-dev
+      run: sudo apt-get -y install libfftw3-dev openmpi-bin libopenmpi-dev clang-format
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: >
+           cmake -B ${{github.workspace}}/build 
+           -DCMAKE_BUILD_TYPE=Release
+           -DCMAKE_CXX_COMPILER=mpicxx
+           -DCMAKE_C_COMPILER=mpicc
+           -DCMAKE_Fortran_COMPILER=mpif90
 
     - name: Build
       # Build your program with the given configuration
@@ -38,4 +43,3 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-      
