--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -82,3 +82,11 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -VV -C ${{env.BUILD_TYPE}}
+
+    - name: Upload CodeCov
+      working-directory: ${{github.workspace}}/build
+      run:
+        - lcov --directory . --capture --output-file coverage.info # capture coverage info
+        - lcov --remove coverage.info '/usr/*' '*single_include*'  --output-file coverage.info # filter out system
+        - lcov --list coverage.info #debug info
+        - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
