--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,10 +9,6 @@ on:
 jobs:
   build1:
     name:  Clang 11 Py3.8 Release
-    # The CMake configure and build commands are platform agnostic and should work equally
-    # well on Windows or Mac.  You can convert this to a matrix build if you need
-    # cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-20.04
 
     steps:
@@ -25,8 +21,6 @@ jobs:
       run: sudo apt-get -y install libfftw3-dev clang-11 libomp-11-dev
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: >
            cmake -B ${{github.workspace}}/build 
            -DCMAKE_BUILD_TYPE=Release
@@ -36,21 +30,43 @@ jobs:
            -DPYTHON_EXECUTABLE=`which python`
 
     - name: Build
-      # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build -j 2
 
     - name: Test
       working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -VV -C ${{env.BUILD_TYPE}}
 
   build2:
+    name:  GCC 10 Py3.9 Release
+    runs-on: ubuntu-20.04
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with: 
+        python-version: '3.9'
+
+    - name: Install Dependencies
+      run: sudo apt-get -y install libfftw3-dev libomp-10-dev gcc-10 g++-10
+
+    - name: Configure CMake
+      run: >
+           cmake -B ${{github.workspace}}/build 
+           -DCMAKE_BUILD_TYPE=Release
+           -DCMAKE_CXX_COMPILER=g++-10
+           -DCMAKE_C_COMPILER=gcc-10
+           -DCMAKE_Fortran_COMPILER=gfortran-10
+           -DPYTHON_EXECUTABLE=`which python`
+
+    - name: Build
+      run: cmake --build ${{github.workspace}}/build -j 2
+
+    - name: Test
+      working-directory: ${{github.workspace}}/build
+      run: ctest -VV -C ${{env.BUILD_TYPE}}
+
+  build3:
     name:  OpenMPI Py3.7 Debug
-    # The CMake configure and build commands are platform agnostic and should work equally
-    # well on Windows or Mac.  You can convert this to a matrix build if you need
-    # cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-20.04
 
     steps:
@@ -63,8 +79,6 @@ jobs:
       run: sudo apt-get -y install libfftw3-dev openmpi-bin libopenmpi-dev clang-format
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: >
            cmake -B ${{github.workspace}}/build 
            -DCMAKE_BUILD_TYPE=Debug
@@ -74,13 +88,10 @@ jobs:
            -DPYTHON_EXECUTABLE=`which python`
 
     - name: Build
-      # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build -j 2
 
     - name: Test
       working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -VV -C ${{env.BUILD_TYPE}}
 
     - name: Upload CodeCov
