--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -96,8 +96,8 @@ jobs:
 
     - name: Upload CodeCov
       working-directory: ${{github.workspace}}/build
-      run:
-        - lcov --directory . --capture --output-file coverage.info # capture coverage info
-        - lcov --remove coverage.info '/usr/*' '*single_include*'  --output-file coverage.info # filter out system
-        - lcov --list coverage.info #debug info
-        - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
+      run: |
+           lcov --directory . --capture --output-file coverage.info # capture coverage info
+           lcov --remove coverage.info '/usr/*' '*single_include*'  --output-file coverage.info # filter out system
+           lcov --list coverage.info #debug info
+           bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
