--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,6 +25,7 @@ jobs:
            cmake -B ${{github.workspace}}/build 
            -DCMAKE_BUILD_TYPE=Release
            -DCMAKE_CXX_COMPILER=clang++-11
+           -DCMAKE_CXX_FLAGS="-fPIC"
            -DCMAKE_C_COMPILER=clang-11
            -DCMAKE_Fortran_COMPILER=gfortran
            -DPYTHON_EXECUTABLE=`which python`
@@ -99,6 +100,7 @@ jobs:
     - name: Upload CodeCov
       working-directory: ${{github.workspace}}/build
       run: |
+           ls
            lcov --directory . --capture --output-file coverage.info # capture coverage info
            lcov --remove coverage.info '/usr/*' '*single_include*'  --output-file coverage.info # filter out system
            lcov --list coverage.info #debug info
@@ -115,4 +117,6 @@ jobs:
 
     - name: Test
       working-directory: ${{github.workspace}}
-      run: ./tools/check_style.sh 
+      run: |
+         ls
+         ./tools/check_style.sh 
