--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -14,6 +14,7 @@ extraction:
         - libblas-dev
         - libfftw3-dev
         - gfortran
+        - python3
     after_prepare:    # Customizable step used by all languages.
       - export GIT=true
     configure:    # Customizable step used only by C/C++ extraction.
