--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -122,3 +122,18 @@ jobs:
       working-directory: ${{github.workspace}}
       run: |
          ./tools/check_style.sh 
+
+  headercheck:
+    name:  check consistency of single_include/helpme_standalone.h
+    runs-on: ubuntu-20.04
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with: 
+        python-version: '3.7'
+
+    - name: Test
+      working-directory: ${{github.workspace}}
+      run: |
+         python tools/inline_headers.py --check
