Enable building a shared library and add options to turn off testing and Python binding

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,8 @@ include_directories(${FFTW_INCLUDES})
 include_directories(${MKL_INCLUDE_DIR})
 add_library(helpmestatic STATIC ${sources_list})
 target_link_libraries(helpmestatic ${FFTW_LIBRARIES})
+add_library(helpme SHARED ${sources_list})
+target_link_libraries(helpme ${FFTW_LIBRARIES})
 
 if(Fortran_ENABLED AND CMAKE_Fortran_COMPILER_ID MATCHES Intel)
     #Enable call to for_rtl_init_() which is required if using the
@@ -18,7 +20,7 @@ set_target_properties(helpmestatic PROPERTIES OUTPUT_NAME helpme EXPORT_NAME hel
 # Make sure headers are installed
 install(DIRECTORY . DESTINATION include FILES_MATCHING PATTERN "*.h")
 
-install(TARGETS helpmestatic
+install(TARGETS helpmestatic helpme
         RUNTIME DESTINATION bin
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib)
